section 부분 css, filter-box html 수정
로고 이미지 추가하고 section css 맞게 filter-box html 수정했습니다.

--- a/todo/todo.html
+++ b/todo/todo.html
@@ -9,31 +9,35 @@
   <body>
     <header>
       <div class="title-container">
-        <img src="#" alt="todo-logo" />
+        <img src="/goorm logo.png" alt="todo-logo" />
         <h1>TODO</h1>
       </div>
     </header>
     <section class="controls">
       <div class="filter-box">
-        <input type="checkbox" value="b-start" id="b-start" />
-        <label for="b-start">시작전</label>
-
-        <input type="checkbox" value="progress" id="progress" />
-        <label for="progress">진행중</label>
-
-        <input type="checkbox" value="complete" id="complete" />
-        <label for="complete">완료</label>
+        <label for="b-start">
+          <input type="checkbox" value="b-start" id="b-start" />
+          시작전
+        </label>
+        <label for="progress">
+          <input type="checkbox" value="progress" id="progress" />
+          진행중
+        </label>
+        <label for="complete">
+          <input type="checkbox" value="complete" id="complete" />
+          완료
+        </label>
       </div>
 
       <div class="form-box">
-        <button class="sort-button">정렬</button>
+        <button>정렬</button>
         <button type="submit">추가</button>
         <div id="input-area"></div>
       </div>
     </section>
     <main>
       <ul id="todo-list">
-      <li class="empty-message">할 일이 없습니다</li>
+        <li class="empty-message">할 일이 없습니다</li>
       </ul>
     </main>
 
